pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-api
spec:
  containers:
    - name: c-api
      image: registry.cluster.wik.cloud/public/echo
      ports:
        - containerPort: 8080
